# sort_images

./: .gitignore  README.md  pyproject.toml
src/sort_images/: main.py
