[project]
name = "sort-images"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rudolph Almeida", email = "rudolf1.almeida@gmail.com" }
]
dependencies = [
    "rich>=13.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sort_images"]

[project.scripts]
sort_images = "sort_images:main"
